# TenSure

./: .gitignore  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  Manifest.toml  Project.toml  README.md
include/backends/: backend_interface.hpp
include/finch_wrapper/: README.md  executor.hpp  finch_backend.hpp  generator.hpp
include/taco_wrapper/: comparator.hpp  executor.hpp  generator.hpp  taco_backend.hpp
include/tensure/: logger.hpp  random_gen.hpp  utils.hpp
scripts/: build_externals.sh
src/: main.cpp
src/backends/: backend_interface.cpp
src/finch_wrapper/: convert_kernel.py  eval_finch.jl  executor.cpp  finch_backend.cpp  generator.cpp
src/finch_wrapper/schemas/: einsum.schema.json  sexp.schema.json
src/taco_wrapper/: comparator.cpp  executor.cpp  generator.cpp  taco_backend.cpp
src/tensure/: random_gen.cpp  utils.cpp
